--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "cleanCache": "rm -rf ./node_modules/.cache/webpack",
-    "clean": "rm -rf ./prod && yarn run cleanCache",
-    "start": "tsc && yarn run lint && webpack serve --port 9000 --mode production --devtool inline-source-map --content-base ./public",
-    "build": "yarn run clean && yarn run lint && tsc && webpack --mode production",
+    "clean": "rm -rf ./prod && npm run cleanCache",
+    "start": "tsc && npm run lint && webpack serve --port 9000 --mode production --devtool inline-source-map --content-base ./public",
+    "build": "npm run clean && npm run lint && tsc && webpack --mode production",
     "run:tsc": "tsc",
     "test": "jest",
     "lint": "eslint . --ext .js,.ts,.tsx --quiet --fix"
