--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "cleanCache": "rm -rf ./node_modules/.cache/webpack",
     "clean": "rm -rf ./prod && npm run cleanCache",
-    "start": "npm run lint && webpack serve --port 9000 --mode production --devtool inline-source-map --content-base ./public",
+    "start": "npm run lint && webpack serve --port 9000 --mode development --devtool inline-source-map --content-base ./public",
     "build": "npm run clean && npm run lint && webpack --mode production",
     "run:tsc": "tsc",
     "test": "jest",
